# CUDAProb3

./: CMakeLists.txt  CalcOscPars.py  Makefile  TestScript.cpp  atmoscpupropagator.hpp  atmoscudapropagator.cu  atmoscudapropagator.cuh  beamcpupropagator.hpp  beamcudapropagator.cu  beamcudapropagator.cuh  constants.hpp  cpupropagator.hpp  cuda_unique.cuh  cudapropagator.cuh  math.hpp  physics.hpp  propagator.hpp  types.hpp
cmake/: CUDASetup.cmake
documentation/latex/: refman.aux  refman.idx  refman.out
example/: .check22.txt.swp  Makefile  mainatmos.cpp  mainatmoscpu  mainbeam.cpp  mainbeamcpu  mainbeamgpu
